Prevent long <code> spans from stretching the page
Fixes https://github.com/seanh/jekyll-theme-seanh/issues/4

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -5,7 +5,6 @@ code {
   font-family: var(--code-font-family);
   font-size: var(--code-font-size);
   border-radius: 3px;
-  white-space: nowrap;
 }
 
 a code {
