--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -109,3 +109,20 @@ summary {
   border-bottom: none;
   color: inherit;
 }
+
+/* Prevent really long words (URLs, <code> spans, ...) from overflowing the
+ * container and introducing a page-level horizontal scrollbar on mobile.
+ * See https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+ */
+code,
+.dont-break-out {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
